--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GENNOZ | Showcase</title>
+    <title>Gennoz</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,500;1,6..96,400&family=Inter:wght@300;400&display=swap" rel="stylesheet">
@@ -195,11 +195,11 @@
 
     <section class="hero-section">
         <div class="hero-image-container">
-            <img src="https://images.unsplash.com/photo-1544531586-fde5298cdd40?q=80&w=1200" class="hero-img" alt="Destaque">
+            <img src="familia01" class="hero-img" alt="Destaque">
         </div>
         <div class="hero-info">
-            <h1 class="hero-title serif">A Dualidade</h1>
-            <p class="meta-data">2025 • Gennoz • Série Principal</p>
+            <h1 class="hero-title serif">Familia</h1>
+            <p class="meta-data">2025 • Gennoz • Pernambuco</p>
         </div>
     </section>
 
@@ -232,16 +232,28 @@
         // --- DADOS DINÂMICOS (FÁCIL EDIÇÃO) ---
         
         const images = [
-            { src: "https://images.unsplash.com/photo-1515462277126-2dd0c162007a?q=80&w=600", title: "Obra 1" },
-            { src: "https://images.unsplash.com/photo-1550684848-fac1c5b4e853?q=80&w=600", title: "Obra 2" },
-            { src: "https://images.unsplash.com/photo-1507608616759-54f48f0af0ee?q=80&w=600", title: "Obra 3" },
-            { src: "https://images.unsplash.com/photo-1534447677768-be436bb09401?q=80&w=600", title: "Obra 4" }
+            { src: "imagem01", title: "Calhetas" },
+            { src: "imagem02", title: "Piedade" },
+            { src: "imagem03", title: "Prazeres" },
+            { src: "imagem04", title: "Prazeres" },
+            { src: "imagem05", title: "Prazeres" },
+            { src: "imagem06", title: "Prazeres" },
+            { src: "imagem07", title: "Serrambi" },
+            { src: "imagem08", title: "Sotave" },
+            { src: "imagem09", title: "Brasília Teimosa" },
+            { src: "imagem10", title: "Serrambi" },
+            { src: "imagem11", title: "Prazeres" },
+            { src: "imagem12", title: "Carpina" },
+            { src: "imagem13", title: "Carpina" },
         ];
 
         const videos = [
-            { src: "video1.mp4" }, // Substitua pelos seus arquivos
-            { src: "video2.mp4" },
-            { src: "video3.mp4" }
+            { src: "video01.mp4" }, // Substitua pelos seus arquivos
+            { src: "video02.mp4" },
+            { src: "video03.mp4" },
+            { src: "video04.mp4" },
+            { src: "video05.mp4" },
+            { src: "video06.mp4" },
         ];
 
         // --- LÓGICA DA ROLETA ---
