--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         .brand-logo { 
             width: 140px; 
             filter: invert(1); 
-            opacity: 0.9;
+            opacity: 0.5;
         }
 
         /* O Palco Principal */
@@ -195,10 +195,10 @@
 
     <section class="hero-section">
         <div class="hero-image-container">
-            <img src="familia01" class="hero-img" alt="Destaque">
+            <img src="familia02.jpg" class="hero-img" alt="Destaque">
         </div>
         <div class="hero-info">
-            <h1 class="hero-title serif">Familia</h1>
+            <h1 class="hero-title serif">Família</h1>
             <p class="meta-data">2025 • Gennoz • Pernambuco</p>
         </div>
     </section>
@@ -232,19 +232,19 @@
         // --- DADOS DINÂMICOS (FÁCIL EDIÇÃO) ---
         
         const images = [
-            { src: "imagem01", title: "Calhetas" },
-            { src: "imagem02", title: "Piedade" },
-            { src: "imagem03", title: "Prazeres" },
-            { src: "imagem04", title: "Prazeres" },
-            { src: "imagem05", title: "Prazeres" },
-            { src: "imagem06", title: "Prazeres" },
-            { src: "imagem07", title: "Serrambi" },
-            { src: "imagem08", title: "Sotave" },
-            { src: "imagem09", title: "Brasília Teimosa" },
-            { src: "imagem10", title: "Serrambi" },
-            { src: "imagem11", title: "Prazeres" },
-            { src: "imagem12", title: "Carpina" },
-            { src: "imagem13", title: "Carpina" },
+            { src: "imagem01.jpg", title: "Calhetas" },
+            { src: "imagem02.jpg", title: "Piedade" },
+            { src: "imagem03.jpg", title: "Prazeres" },
+            { src: "imagem04.jpg", title: "Prazeres" },
+            { src: "imagem05.jpg", title: "Prazeres" },
+            { src: "imagem06.jpg", title: "Prazeres" },
+            { src: "imagem07.jpg", title: "Serrambi" },
+            { src: "imagem08.jpg", title: "Sotave" },
+            { src: "imagem09.jpg", title: "Brasília Teimosa" },
+            { src: "imagem10.jpg", title: "Serrambi" },
+            { src: "imagem11.jpg", title: "Prazeres" },
+            { src: "imagem12.jpg", title: "Carpina" },
+            { src: "imagem13.jpg", title: "Carpina" },
         ];
 
         const videos = [
