--- a/index.html
+++ b/index.html
@@ -205,7 +205,13 @@
 
     <section class="carousel-section">
         <div class="section-header">
-            <h2 class="serif">Seleção Visual</h2>
+            <img src="imagem01.jpg">
+            <img src="imagem02.jpg">
+            <img src="imagem03.jpg">
+            <img src="imagem04.jpg">
+            <img src="imagem05.jpg">
+            <img src="imagem06.jpg">
+            <h2 class="serif">Acervo</h2>
             <p class="meta-data">Deslize para navegar</p>
         </div>
 
@@ -217,7 +223,8 @@
 
     <section class="carousel-section">
         <div class="section-header">
-            <h2 class="serif">Motion</h2>
+            <img src="video01">
+            <h2 class="serif">Acervo</h2>
         </div>
 
         <div class="carousel-track" id="track-videos">
