--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
     <section class="carousel-section">
         <div class="section-header-wrapper">
             <div class="section-header">
-                <h2 class="serif">Memórias</h2>
-                <p class="meta-data">PE</p>
+                <h2 class="serif">Motion</h2>
+                <p class="meta-data">Autoplay no Destaque</p>
             </div>
         </div>
         
