--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <div class="section-header-flex">
             <div>
                 <h2 class="serif section-title">Acervo</h2>
-                <p class="meta-data">Coleções Recentes</p>
+                <p class="meta-data">Recentes</p>
             </div>
             <a href="colecoes.html" class="collection-link">EXPLORAR TODAS AS COLEÇÕES →</a>
         </div>
@@ -338,7 +338,7 @@
         <div class="section-header-flex center">
             <div>
                 <h2 class="serif section-title">Memórias</h2>
-                <p class="meta-data">Fragmentos Audiovisuais</p>
+                <p class="meta-data">Pernambuco</p>
             </div>
         </div>
         
@@ -355,24 +355,24 @@
     <script>
         // === BASE DE DADOS ===
         const dataHero = [
-            { src: "familia02.jpg", title: "Família", meta: "2025 • GENNOZ" },
-            { src: "imagem01.jpg", title: "Raízes", meta: "2024 • TERRA" },
-            { src: "imagem07.jpg", title: "Maré", meta: "2024 • SERRAMBI" }
+            { src: "familia02.jpg", title: "Paz", meta: "2025 • PERNAMBUCO" },
+            { src: "familia01.jpg", title: "Família", meta: "2025 • PERNAMBUCO" },
+            { src: "familia03.jpg", title: "Amor", meta: "2025 • PERNAMBUCO" }
         ];
 
         const dataAcervo = [
             { src: "imagem01.jpg", title: "Calhetas", meta: "CABO", link: "obra.html" },
             { src: "imagem02.jpg", title: "Piedade", meta: "JABOATÃO", link: "obra.html" },
-            { src: "imagem03.jpg", title: "Prazeres", meta: "URBANO", link: "obra.html" },
-            { src: "imagem12.jpg", title: "Carpina", meta: "MATA", link: "obra.html" }
+            { src: "imagem03.jpg", title: "Prazeres", meta: "JABOATÃO", link: "obra.html" },
+            { src: "imagem04.jpg", title: "Prazeres", meta: "JABOATÃO", link: "obra.html" }
         ];
 
         // orientation: define o formato para o Smart Ratio
         const dataMemorias = [
-            { src: "video01.mp4", title: "Cores", orientation: "landscape" },
-            { src: "video06.mp4", title: "Foco", orientation: "portrait" },
-            { src: "video02.mp4", title: "Loop", orientation: "landscape" },
-            { src: "video04.mp4", title: "Transição", orientation: "portrait" },
+            { src: "video01.mp4", title: "Passeio", orientation: "portrait" },
+            { src: "video02.mp4", title: "Distração", orientation: "portrait" },
+            { src: "video05.mp4", title: "Túnel", orientation: "portrait" },
+            { src: "video04.mp4", title: "Adrenalina", orientation: "landscape" },
             { src: "video03.mp4", title: "Noite", orientation: "landscape" }
         ];
 
