--- a/index.html
+++ b/index.html
@@ -316,34 +316,34 @@
 
         // === BASES DE DADOS ===
         const dataHero = [
-            parseFilename("Eu e Nuz-2025-Prazeres.jpg", 'hero'),
-            parseFilename("Família-2025-Prazeres.jpg", 'hero'),
-            parseFilename("Eu, Ela e os Bebês-2025-Prazeres.jpg", 'hero')
+            parseFilename("Eu_e_Nuz-2025-Prazeres.jpg", 'hero'),
+            parseFilename("Familia-2025-Prazeres.jpg", 'hero'),
+            parseFilename("Eu_Ela_e_os_Bebes-2025-Prazeres.jpg", 'hero')
         ];
 
         const dataAcervo = [
-            parseFilename("Praia de Serrambi-2024-Ipojuca.jpg", 'acervo'),
-            parseFilename("Orgulho em Calhetas-2024-Cabo.jpg", 'acervo'),
-            parseFilename("Praia de Piedade-2024-Jaboatao.jpg", 'acervo'),
-            parseFilename("Dia Azul em Prazeres-2024-Jaboatao.jpg", 'acervo'),
-            parseFilename("Engrenagens do Interior-2023-Carpina.jpg", 'acervo'),
-            parseFilename("Caramelos em Serrambi-2024-Ipojuca.jpg", 'acervo'),
-            parseFilename("Crias de Prazeres-2024-Jaboatao.jpg", 'acervo'),
-            parseFilename("Gato em Brasília Teimosa-2024-Recife.jpg", 'acervo'),
-            parseFilename("Vista do Interior-2023-Carpina.jpg", 'acervo'),
+            parseFilename("Praia_de_Serrambi-2024-Ipojuca.jpg", 'acervo'),
+            parseFilename("Orgulho_em_Calhetas-2024-Cabo.jpg", 'acervo'),
+            parseFilename("Praia_de_Piedade-2024-Jaboatao.jpg", 'acervo'),
+            parseFilename("Dia_Azul_em_Prazeres-2024-Jaboatao.jpg", 'acervo'),
+            parseFilename("Engrenagens_do_Interior-2023-Carpina.jpg", 'acervo'),
+            parseFilename("Caramelos_em_Serrambi-2024-Ipojuca.jpg", 'acervo'),
+            parseFilename("Crias_de_Prazeres-2024-Jaboatao.jpg", 'acervo'),
+            parseFilename("Gato_em_Brasilia_Teimosa-2024-Recife.jpg", 'acervo'),
+            parseFilename("Vista_do_Interior-2023-Carpina.jpg", 'acervo'),
             parseFilename("Sotave-2024-Jaboatao.jpg", 'acervo'),
-            parseFilename("Jaboatão Nublado-2024-Jaboatao.jpg", 'acervo'),
-            parseFilename("Vibe Prazeres-2024-Jaboatao.jpg", 'acervo'),
-            parseFilename("Linha Férrea em Prazeres-2024-Jaboatao.jpg", 'acervo')
+            parseFilename("Jaboatao_Nublado-2024-Jaboatao.jpg", 'acervo'),
+            parseFilename("Vibe_Prazeres-2024-Jaboatao.jpg", 'acervo'),
+            parseFilename("Linha_Ferrea_em_Prazeres-2024-Jaboatao.jpg", 'acervo')
         ];
 
         // Vídeos com Orientation Manual Obrigatória
         const dataMemorias = [
-            { ...parseFilename("De Boinha-2023-Jaboatao.mp4", 'memo'), orientation: "portrait" },
-            { ...parseFilename("Túnel do Tempo-2023-Recife.mp4", 'memo'), orientation: "portrait" },
-            { ...parseFilename("Passeio em Recife-2023-Recife.mp4", 'memo'), orientation: "portrait" },
-            { ...parseFilename("Aventura em Enseadas-2022-Cabo.mp4", 'memo'), orientation: "landscape" },
-            { ...parseFilename("Patins e Itapuama-2022-Cabo.mp4", 'memo'), orientation: "landscape" },
+            { ...parseFilename("De_Boinha-2023-Jaboatao.mp4", 'memo'), orientation: "portrait" },
+            { ...parseFilename("Tunel_do_Tempo-2023-Recife.mp4", 'memo'), orientation: "portrait" },
+            { ...parseFilename("Passeio_em_Recife-2023-Recife.mp4", 'memo'), orientation: "portrait" },
+            { ...parseFilename("Aventura_em_Enseadas-2022-Cabo.mp4", 'memo'), orientation: "landscape" },
+            { ...parseFilename("Patins_e_Itapuama-2022-Cabo.mp4", 'memo'), orientation: "landscape" },
         ];
 
         let state = { hero: 0, acervo: 0, memo: 0 };
